--- a/public/add-task.html
+++ b/public/add-task.html
@@ -1,42 +1,62 @@
-<!-- add-task.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adicionar Tarefa - TaskHub</title>
-  <link rel="stylesheet" href="/styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body>
-  <header>
-    <h1>Bem-vindo ao Gerenciador de Tarefas!</h1>
-    <nav>
-      <ul>
-        <li><a href="/">Início</a></li>
-        <li><a href="/tasks">Minhas Tarefas</a></li>
-        <li><a href="/tasks/add">Adicionar Tarefa</a></li>
-      </ul>
-    </nav>
+<body class="bg-gray-50 min-h-screen flex flex-col">
+  <header class="bg-blue-600 text-white shadow-lg">
+    <div class="container mx-auto px-4 py-6">
+      <h1 class="text-3xl font-bold text-center mb-4">TaskHub</h1>
+      <nav>
+        <ul class="flex justify-center space-x-6">
+          <li><a href="/" class="hover:text-blue-200 transition-colors px-3 py-2 rounded">Início</a></li>
+          <li><a href="/tasks" class="hover:text-blue-200 transition-colors px-3 py-2 rounded">Minhas Tarefas</a></li>
+          <li><a href="/tasks/add" class="bg-blue-500 px-4 py-2 rounded-lg">Adicionar Tarefa</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <main>
-    <h2>Adicionar Tarefa</h2>
-    <form id="addTaskForm">
-      <label for="title">Título:</label>
-      <input type="text" id="title" name="title" required>
-      <br>
-      <label for="description">Descrição:</label>
-      <textarea id="description" name="description" required></textarea>
-      <br>
-      <button type="submit">Adicionar Tarefa</button>
-    </form>
+  <main class="flex-1 container mx-auto px-4 py-8">
+    <div class="max-w-2xl mx-auto">
+      <h2 class="text-2xl font-semibold text-gray-800 mb-6">Adicionar Nova Tarefa</h2>
+      <div class="bg-white rounded-lg shadow-md p-6">
+        <form id="addTaskForm" class="space-y-6">
+          <div>
+            <label for="title" class="block text-sm font-medium text-gray-700 mb-2">Título:</label>
+            <input type="text" id="title" name="title" required 
+                   class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+                   placeholder="Digite o título da tarefa">
+          </div>
+          
+          <div>
+            <label for="description" class="block text-sm font-medium text-gray-700 mb-2">Descrição:</label>
+            <textarea id="description" name="description" required rows="4"
+                      class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+                      placeholder="Descreva os detalhes da tarefa"></textarea>
+          </div>
+          
+          <div class="flex space-x-4">
+            <button type="submit" 
+                    class="flex-1 bg-green-600 text-white py-2 px-4 rounded-md hover:bg-green-700 transition-colors font-medium">
+              Adicionar Tarefa
+            </button>
+            <a href="/tasks" 
+               class="flex-1 bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 transition-colors font-medium text-center">
+              Cancelar
+            </a>
+          </div>
+        </form>
+      </div>
+    </div>
   </main>
-  <footer>
-    <p>Este projeto é licenciado sob <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0 Universal (CC0
-        1.0) Public Domain Dedication</a>.</p>
+  <footer class="bg-gray-800 text-white py-4">
+    <div class="container mx-auto px-4 text-center">
+      <p class="text-sm">Este projeto é licenciado sob <a href="https://creativecommons.org/publicdomain/zero/1.0/" class="text-blue-400 hover:text-blue-300">CC0 1.0 Universal</a>.</p>
+    </div>
   </footer>
   <script src="/add-task.js"></script>
 </body>
-
 </html>
