--- a/public/task-view.html
+++ b/public/task-view.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TaskHub - Detalhes da Tarefa</title>
-  <link rel="stylesheet" href="/styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body>
-  <header>
-    <h1>TaskHub - Detalhes da Tarefa</h1>
-    <nav>
-      <ul>
-        <li><a href="/">Início</a></li>
-        <li><a href="/tasks">Minhas Tarefas</a></li>
-        <li><a href="/tasks/add">Adicionar Tarefa</a></li>
-        <!-- Adicione mais links conforme necessário -->
-      </ul>
-    </nav>
+<body class="bg-gray-50 min-h-screen flex flex-col">
+  <header class="bg-blue-600 text-white shadow-lg">
+    <div class="container mx-auto px-4 py-6">
+      <h1 class="text-3xl font-bold text-center mb-4">TaskHub</h1>
+      <nav>
+        <ul class="flex justify-center space-x-6">
+          <li><a href="/" class="hover:text-blue-200 transition-colors px-3 py-2 rounded">Início</a></li>
+          <li><a href="/tasks" class="hover:text-blue-200 transition-colors px-3 py-2 rounded">Minhas Tarefas</a></li>
+          <li><a href="/tasks/add" class="hover:text-blue-200 transition-colors px-3 py-2 rounded">Adicionar Tarefa</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <main>
-    <h2>Detalhes da Tarefa</h2>
-    <div id="taskDetails">
-      <!-- Aqui você pode exibir os detalhes da tarefa usando JavaScript ou AJAX -->
+  <main class="flex-1 container mx-auto px-4 py-8">
+    <div class="max-w-3xl mx-auto">
+      <div class="flex items-center justify-between mb-6">
+        <h2 class="text-2xl font-semibold text-gray-800">Detalhes da Tarefa</h2>
+        <a href="/tasks" class="text-blue-600 hover:text-blue-800 transition-colors">
+          ← Voltar para lista
+        </a>
+      </div>
+      <div class="bg-white rounded-lg shadow-md p-6">
+        <div id="taskDetails" class="space-y-4">
+          <!-- Conteúdo carregado via JavaScript -->
+        </div>
+      </div>
     </div>
   </main>
-  <footer>
-    <p>Este projeto é licenciado sob <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0 Universal (CC0 1.0) Public Domain Dedication</a>.</p>
+  <footer class="bg-gray-800 text-white py-4">
+    <div class="container mx-auto px-4 text-center">
+      <p class="text-sm">Este projeto é licenciado sob <a href="https://creativecommons.org/publicdomain/zero/1.0/" class="text-blue-400 hover:text-blue-300">CC0 1.0 Universal</a>.</p>
+    </div>
   </footer>
   <script src="/task-view.js"></script>
 </body>
-
 </html>
